docs/7.52/md/abenfile_interface_naming.md
---
title: "Physical and Logical File Names"
description: |
  -   Physical File Names(#abenfile-interface-naming-1--------logical-file-names-and-logical-paths---@ITOC@@ABENFILE_INTERFACE_NAMING_2) Physical File Names Files are addressed in all the statements of the file interface by using the physical file name by which they are known in the particular platf
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfile_interface_naming.htm"
abapFile: "abenfile_interface_naming.htm"
keywords: ["do", "if", "try", "method", "class", "data", "abenfile", "interface", "naming"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP File Interface](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_files.htm) → 

Physical and Logical File Names

-   [Physical File Names](#abenfile-interface-naming-1--------logical-file-names-and-logical-paths---@ITOC@@ABENFILE_INTERFACE_NAMING_2)

Physical File Names

Files are addressed in all the statements of the file interface by using the physical file name by which they are known in the particular platform. This is why a file cannot be opened more than once in the same program. The physical name of a file is usually made up of a path description and the file name itself. File names with blank spaces are permitted where the blanks are part of the file name. The actual notation depends on the operating system of the application server. Any file names that do not contain an absolute path reference the directory defined using the [profile parameter](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprofile_parameter_glosry.htm "Glossary Entry") DIR\_HOME.

Note

When using physical file names, relative paths should be avoided and only absolute paths should be specified If used, relative paths are not resolved to absolute paths using the authorization object S\_DATASET and the authorization object S\_PATH (together with the database table SPTH) in [automatic authorization checks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfile_interface_authority.htm) and the literal character strings are compared instead.

Logical File Names and Logical Paths

Logical file names and logical paths support both cross-platform programs and [secure programs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_security.htm). Logical file names and logical paths can be created as follows and associated with the actual physical file names for each platform:

-   Non-client-specific logical file names with transaction FILE.

-   Client-specific logical file names with customizing activity SF01.

The following function modules and methods are available for the use of logical file names in programs:

-   Using the FILE\_GET\_NAME function module it is possible to, for a logical file name, ascertain the physical file name or directory valid for the current platform and use it in statements of the file interface.

-   Input fields for logical file names in SAP GUI are supported by the function modules FILE\_LOGFILE\_ALIAS\_PBO, FILE\_LOGFILE\_ALIAS\_PAI, and FILE\_LOGFILE\_ALIAS\_F4. These modules create an appropriate list box, check the value entered, and produce a suitable input help.

Notes

-   Logical file names are one way of [validating file names](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendataset_auth_self.htm) and securing a program against attack by [directory traversal](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendirectory_traversal_glosry.htm "Glossary Entry").

-   More information about logical file names and logical paths can be found under Documentation Logical File Names in [SAP Help Portal](http://help.sap.com).

-   The class CL\_FS\_PATH contains methods to analyze, transform, or create file names and path entries.